--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -29,7 +29,7 @@ import { ABOUT_ME, SITE_TITLE } from "@/consts";
 <!-- Font preloads -->
 <link
   rel="preload"
-  href="/fonts/VCRosdNEUE.ttf"
+  href="/fonts/whitrabt.ttf"
   as="font"
   type="font/ttf"
   crossorigin
